<resources>
    <string name="app_name">ArtSpaceApp</string>
    <string name="button">Button</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="just_because_time_flies_does_not_mean_it_s_pointless">Just because time Flies, does not mean it\'s Pointless.</string>
    <string name="orpilla_christopher">Orpilla, Christopher</string>
    <string name="todo">TODO</string>
    <string name="boredom">boredom</string>
    <string name="solitude">Solitude.</string>
    <string name="if_you_can_see_with_my_eyes_you_ll_understand">If you can see with my eyes, you\'ll understand.</string>
    <string name="if_i_had_a_lot_of_secrets_would_you_die_for_me">If i had a lot of secrets, would you die for me?</string>
</resources>